--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,8 @@
 
-.con6{height: 30vh;}
-#na{
-    border-top : 1px solid #c4c4c4;
-    width: 1000px;
-    display: block;
-    text-align: center;
-    margin-left: -550px;
 
+#na{
+    font-size: 18px;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 200px;
 }
