--- a/css/home.css
+++ b/css/home.css
@@ -1,25 +1,57 @@
-#home{position: relative; overflow: hidden; height: 70vh;}
-    #home video{position: absolute; z-index: -1; top: -300px; left: 0; opacity: 40%; width: 100%; }
-    #home::before {content: "";position: absolute;z-index: -1;top: 0;left: 0;width: 100%;
-    height: 100%;background-color: #4f3208; /* 원하는 색상으로 변경 가능 */
-    opacity: 0.3; /* 투명도 조절 가능 (0부터 1까지의 값) */
+.con{
     
+    color:#f9f9f9;
+    position: relative; 
+    overflow: hidden; 
+    height: 100%;
+    text-align: center;
 }
-    
-#pt {
-    align-items: flex-end;
-    flex-direction: column; /* 요소들을 수직으로 아래로 배치합니다. */
-    
-    
-}     
-.con{height: 100vh; display: block; align-items: center; justify-content: center;
-   
-    color:#f9f9f9;}
-.con h2{font-size: 30px;}
+/* .con video{position: absolute; z-index: -1; top: -300px; left: 0; opacity: 40%; width: 100%; }
+
+
+.con::before {content: "";position: absolute;z-index: -1;top: 0;left: 0;width: 100%;
+    height: 100%;background-color: #000000; 
+    opacity: 0.7;  } */
+.con video {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 40%;
+}
+
+.con::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000; /* 원하는 색상으로 변경 가능 */
+    opacity: 0.7; /* 투명도 조절 가능 (0부터 1까지의 값) */
+}
+
+@media (max-width: 600px) {
+    .con video {
+        position: static;
+    }
+}
+
 #hometx{
-    margin-left: 330px;
-    margin-top: 280px;
+    width: 100%;
+    font-size: 30px; 
+    font-family:'SB';
+    margin-top: 5vh;
+    text-align: center;
+    
+    
 }
-#ft {
-    margin-left: 1000px;
+
+#zz{
+    margin-bottom: 30px;
 }
+
