--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -25,7 +25,7 @@ font-family: 'SB';
     justify-content: center;
     border-radius: 30px;
     text-align: center;
-    
+    margin-left: 70px;
     }
     
     .a tr th,
@@ -50,7 +50,7 @@ font-family: 'SB';
 
 
 #profileimg img {
-width: 220px;
+width: 240px;
 }
 
 
